# fbref-scouting-tool

./: .gitignore  main.py  pyproject.toml
.spyproject/config/backups/: workspace.ini.bak
analysis/: player_scout.py
db/: create_db.py
load_data/: fbref_read_big_stats.py
src/Scouting/: main.py
src/Scouting/analysis/: player_scout.py
src/Scouting/load_data/: fbref_read_big_stats.py  fbref_read_matches.py
src/Scouting/procces_data/: passing_stats.py  shooting_stats.py
