[project]
name = "fast-soccer-analysis-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.1.3",
    "isort>=5.13.2",
    "lxml>=5.3.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "ruff>=0.8.1",
    "tabulate>=0.9.0",
]
