
[tool.poetry]
name = "Scouting"
version = "0.1.0"
description = "A package used to conduct football analysis from fbref data"
authors = ["med0504 <mo050426@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
polars = "^1.21.0"
duckdb = "^1.1.3"
sqlalchemy = "^2.0.37"
isort = "^6.0.0"
lxml = "^5.3.0"
ruff = "^0.9.3"
numpy = "^2.2.2"
tabulate = "^0.9.0"
pydantic = "^2.10.6"
pyarrow = "^19.0.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
